Added the Entity models, applied an initial migration to the database and extended the default IdentityUser.

--- a/TwinsArtstyle/appsettings.json
+++ b/TwinsArtstyle/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EJA8F6B\\SQLEXPRESS;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-EJA8F6B\\SQLEXPRESS;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TwinsArtstyleIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TwinsArtstyleDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
