Added 2 Areas into the project (Admin area and Main area) changed the folder structure and added routes for the specified areas.

--- a/TwinsArtstyle/TwinsArtstyle.csproj
+++ b/TwinsArtstyle/TwinsArtstyle.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TwinsArtstyle.Services\TwinsArtstyle.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\" />
   </ItemGroup>
 
 </Project>
