Added more controllers in the admin area and added a view which displays all registered users.

--- a/TwinsArtstyle/TwinsArtstyle.csproj
+++ b/TwinsArtstyle/TwinsArtstyle.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\TwinsArtstyle.Services\TwinsArtstyle.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\Roles\" />
+    <Folder Include="Areas\Admin\Views\Products\" />
+  </ItemGroup>
+
 </Project>
