--- a/TwinsArtstyle/TwinsArtstyle.csproj
+++ b/TwinsArtstyle/TwinsArtstyle.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\TwinsArtstyle.Services\TwinsArtstyle.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Main\Views\Cart\" />
+  </ItemGroup>
+
 </Project>
