Added a name to the Address entity and fixed some stringlength constraints.

--- a/TwinsArtstyle/TwinsArtstyle.csproj
+++ b/TwinsArtstyle/TwinsArtstyle.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Main\Views\Cart\" />
+    <Folder Include="Areas\Main\Views\Addresses\" />
   </ItemGroup>
 
 </Project>
