Finished all of the unit tests for the services. Added helper classes which generate an in memory database.

--- a/TwinsArtstyle.Tests/TwinsArtstyle.Tests.csproj
+++ b/TwinsArtstyle.Tests/TwinsArtstyle.Tests.csproj
@@ -34,6 +34,9 @@
     <None Update="TestData\categories.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\orders.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\products.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
