--- a/TwinsArtstyle/appsettings.json
+++ b/TwinsArtstyle/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-EJA8F6B\\SQLEXPRESS;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true",
     "TwinsArtstyleIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TwinsArtstyleDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TwinsArtstyleDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TwinsArtstyle;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Redis": "localhost"
   },
   "Logging": {
     "LogLevel": {
